--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>infrog work</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,8 +19,8 @@
         <nav class="nav">
             <div class="head">
                 <a href="#">
-                    <h3>Info</h3>
-                    <h3>RAG</h3>
+                    <!-- <h3>Info</h3>
+                    <h3>RAG</h3> -->
                 </a>
             </div>
 
@@ -41,7 +47,7 @@
                     </svg></a>
 
                 <button onclick=showcontent()><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                        fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                        fill="currentColor" class=" three-lines bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                     </svg></button>
@@ -50,26 +56,26 @@
 
         <div class="content">
             <ul>
-                <li><a href="#"><b>About</b></a></li>
+                <li><a href="#"><b>Services</b></a></li>
+                <li><a href="#"><b>CoEs</b></a></li>
+                <li><a href="#"><b>Solution</b> </a></li>
+                <li><a href="#"><b>BizNext</b></a></li>
+                <li><a href="#"><b>YASH tech.AI</b></a></li>
+                <li><a href="#"><b>industries</b> </a></li>
+                <!-- <li><a href="#"><b>About AS</b></a></li> -->
+                <li><a href="#"><b>careers</b></a></li>
+                <!-- <li><a href="#"><b>Socialmedia</b> </a></li> -->
+                <!-- <li><a href="#"><b>About</b></a></li>
                 <li><a href="#"><b>Contact</b></a></li>
                 <li><a href="#"><b>Socialmedia</b> </a></li>
                 <li><a href="#"><b>About</b></a></li>
                 <li><a href="#"><b>Contact</b></a></li>
-                <li><a href="#"><b>Socialmedia</b> </a></li>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#"><b>Contact</b></a></li>
-                <li><a href="#"><b>Socialmedia</b> </a></li>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#"><b>Contact</b></a></li>
-                <li><a href="#"><b>Socialmedia</b> </a></li>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#"><b>Contact</b></a></li>
-                <li><a href="#"><b>Socialmedia</b> </a></li>
+                <li><a href="#"><b>Socialmedia</b> </a></li> -->
             </ul>
         </div>
 
         <div class="navtwo" id="fix">
-            <a href="#"><img src="./img/IMG_5250.png" alt=""></a>
+            <a href="#"><img src="./img/yash-technologies-squareLogo-1661437007947.webp" alt=""></a>
             <nav>
                 <a href="#"><b>Home</b></a>
                 <a href="#"><b>About</b></a>
@@ -77,11 +83,6 @@
                 <a href="#"><b>Projects</b></a>
             </nav>
         </div>
-
-
-
-
-
         <div class="video-container">
             <video autoplay muted loop playinline class="background-vidio">
                 <source src="./img/1654216-hd_1920_1080_30fps.mp4">
@@ -125,7 +126,7 @@
         </div>
         <div class="txt-title">
             <h1>We Partner to Deliver.</h1>
-            <p>INFORAG Technologies is a leading technology integrator specializing in helping clients reimagine
+            <p>yash Technologies is a leading technology integrator specializing in helping clients reimagine
                 operating
                 models, enhance competitiveness, optimize costs, foster exceptional stakeholder experiences and drive
                 business transformation. With our unique 'glocal' approach, we consultatively partner clients across
@@ -235,7 +236,7 @@
                         <path
                             d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708zm1.734 3.374a2 2 0 1 1 3.296 2.198q.3.423.516.898a3 3 0 1 0-4.84-3.225q.529.017 1.028.129m4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377M14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1z" />
                     </svg>
-                    <h3>INFORAG4hHANA</h3>
+                    <h3>YASH4HANA</h3>
                 </div>
                 <div class="sol-box">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
@@ -246,7 +247,6 @@
                             d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5 5 0 0 0 8 3M3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9z" />
                     </svg>
                     <h3>Factory Process Automation</h3>
-
                 </div>
             </div>
             <div class="sol-box-box">
@@ -289,29 +289,96 @@
         </div>
         <div class="future">
             <div class="future-text">
-            <p> * BE FUTURE READY</p>
-            <h3>INFORAG Perspectives.</h3>
+                <p> * BE FUTURE READY</p>
+                <h3> YASH Perspectives.</h3>
             </div>
             <div class="future-box">
                 <div class="future-box0">
                     <p>Experience better customer retention Capacity with microsoft Dynamics 365</p>
+                    <img src="./img/businesswoman-working-computer-with-data-charts-management-strategy-corporate-office-entrepreneur-using-technology-monitor-research-analysis-design-planning.jpg"
+                        alt="">
                 </div>
                 <div class="future-box0">
-                     <p>Top seven tips so you can create a reliable embedded system</p>
+                    <p>Top seven tips so you can create a reliable embedded system</p>
+                    <img src="./img/pexels-silverkblack-23496639.jpg" alt="">
                 </div>
                 <div class="future-box0">
-                    <p>The perfect pairing:QAD and the food  and beverage industry</p>
+                    <p>The perfect pairing:QAD and the food and beverage industry</p>
+                    <img src="./img/programming-background-collage.jpg" alt="">
                 </div>
                 <div class="future-box0">
-                   <p>the positive side effect of COVID-19 for businesses</p>
+                    <p>The positive side effect of COVID-19 for businesses</p>
+                    <img src="./img/pexels-silverkblack-23496639.jpg" style="margin-top: 20px;">
                 </div>
-
             </div>
             <div class="vav">
-            <button>View all vlogs</button>
+                <button>View all vlogs &nbsp; <svg xmlns="http://www.w3.org/2000/svg" width="16" height="25"
+                        fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                    </svg></button>
             </div>
         </div>
-        
+        <div class="career">
+            <div class="career-img">
+                <img src="./img/pexels-silverkblack-23496639.jpg" alt="">
+            </div>
+            <div class="career-txt">
+                <p> * CAREERS</p>
+                <h3>Shape Your Future, Join YASH Today!</h3>
+                <button> Explore now</button>
+            </div>
+        </div>
+        <div class="upper-footar">
+            <h3>Stay connected to get the best of YASH Technologies in your inbox</h3> &nbsp;
+            <div class="up-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                    class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
+                </svg>
+                &nbsp;&nbsp;&nbsp;<p>subscribe</p>
+            </div>
+        </div>
+        <div class="footar">
+            <div class="quick-link">
+                <p>Quick Links:</p>
+                <a href="#">SAP</a>
+                <a href="#">Digitalization</a>
+                <a href="#">Modernization</a>
+                <a href="#">Intelligence Services</a>
+                <a href="#">NextGen AMS</a>
+                <a href="#">Cloud & Infrastructure Management Services</a>
+                <a href="#">Cyber Security Services</a>
+                <a href="#">IoT</a>
+            </div>
+            <div class="subscribe">
+                <p>Subsidiaries:</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#">Aaseya IT Services</a> &nbsp;&nbsp;&nbsp;
+                <a href="#">Codiant Technologies</a>&nbsp;&nbsp;&nbsp;
+                <a href="#">Intellents</a>&nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="certified">
+                <img src="./img/yash-technologies-squareLogo-1661437007947.webp" alt="">
+                <img src="./img/images.png" alt="">
+                <img src="./img/image-13.png" alt="">
+                <img src="./img/images.jpg" alt="">
+            </div>
+            <div class="Socialmedia">
+                <div class="smt">
+                    <h4>CSR/ Site Map/ Legal/ Privacy policy/ Payment policy/ Modern Slavery Act Policy </h4>
+                    <p> Copyright © 2025. YASH Technologies. All Rights Reserved.</p>
+                </div>
+                <div class="sml">
+                    <a href="#" style="padding: 5px 10px;"><i class="fa fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-youtube"></i></a>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <script>
