--- a/index.html
+++ b/index.html
@@ -342,15 +342,15 @@
         </div>
         <div class="footar">
             <div class="quick-link">
-                <p>Quick Links:</p>
-                <a href="#">SAP</a>
-                <a href="#">Digitalization</a>
-                <a href="#">Modernization</a>
-                <a href="#">Intelligence Services</a>
-                <a href="#">NextGen AMS</a>
-                <a href="#">Cloud & Infrastructure Management Services</a>
-                <a href="#">Cyber Security Services</a>
-                <a href="#">IoT</a>
+                <p>Quick Links:</p>&nbsp;
+                <a href="#">SAP</a>&nbsp;
+                <a href="#">Digitalization</a>&nbsp;
+                <a href="#">Modernization</a>&nbsp;
+                <a href="#">Intelligence Services</a>&nbsp;
+                <a href="#">NextGen AMS</a>&nbsp;
+                <a href="#">Cloud & Infrastructure Management Services</a>&nbsp;
+                <a href="#">Cyber Security Services</a>&nbsp;
+                <a href="#">IoT</a>&nbsp;
             </div>
             <div class="subscribe">
                 <p>Subsidiaries:</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
