--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>infrog work</title>
+    <title>Yash technology clone</title>
+    <link rel="shortcut icon" href="./img/yash-technologies-squareLogo-1661437007947.webp" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,8 +20,6 @@
         <nav class="nav">
             <div class="head">
                 <a href="#">
-                    <!-- <h3>Info</h3>
-                    <h3>RAG</h3> -->
                 </a>
             </div>
 
